--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <service
             android:name=".services.MusicService"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false"
+            android:stopWithTask="true">
         </service>
     </application>
 
